--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -58,32 +58,25 @@ h3, h4, h5 {
   font-weight: 600;
 }
 
-.navbar-right {
-  float: right !important;
-}
-
-.nav {
+.ml-auto {
   > li > a {
     color: #a7b1c2;
     font-weight: 600;
     padding: 14px 20px 14px 25px;
-  }
-  &.navbar-right > li > a {
-    color: #999c9e;
   }
   > li.active > a {
     color: $white;
   }
 }
 
-.navbar-light .nav > li > a {
+.navbar-light .ml-auto > li > a {
   &:focus, &:hover {
     background-color: #293846;
     color: $white;
   }
 }
 
-.nav.navbar-top-links > li > a {
+.ml-auto.navbar-top-links > li > a {
   &:focus, &:hover {
     background-color: transparent;
   }
@@ -93,7 +86,7 @@ h3, h4, h5 {
   background-color: transparent;
 }
 
-.nav > li > a i {
+.ml-auto > li > a i {
   margin-right: 6px;
 }
 
@@ -130,7 +123,7 @@ h3, h4, h5 {
   background: url(patterns/header-profile.png) no-repeat;
 }
 
-.nav > li.active {
+.ml-auto > li.active {
   border-left: 4px solid $link-color;
   background: #293846;
 }
@@ -152,7 +145,7 @@ h3, h4, h5 {
   display: inline-table;
 }
 
-.nav.navbar-top-links a {
+.ml-auto.navbar-top-links a {
   font-size: 14px;
 }
 
@@ -269,7 +262,7 @@ body.canvas-menu .nav-header {
   font-size: 14px;
 }
 
-.link-block, .nav.navbar-top-links .link-block a {
+.link-block, .ml-auto.navbar-top-links .link-block a {
   font-size: 12px;
 }
 
@@ -340,7 +333,7 @@ body.canvas-menu .nav-header {
     background-color: transparent;
     border-color: transparent;
     transition: all .3s ease-in-out 0s;
-    .nav li a {
+    .ml-auto li a {
       color: $white;
       font-family: 'Open Sans', helvetica, arial, sans-serif;
       font-weight: 700;
@@ -396,7 +389,7 @@ body.canvas-menu .nav-header {
       transition: all .3s ease-in-out 0s;
     }
   }
-  .navbar-scroll.navbar-light .nav li a {
+  .navbar-scroll.navbar-light .ml-auto li a {
     color: $gray;
     &:hover {
       color: $link-color;
@@ -408,7 +401,7 @@ body.canvas-menu .nav-header {
     border-bottom: 1px solid $light-gray1;
     border-radius: 0;
   }
-  .nav > li {
+  .ml-auto > li {
     &.active {
       border: none;
       background: inherit;
@@ -570,7 +563,7 @@ body.canvas-menu .nav-header {
         background: 0 0;
         color: inherit;
       }
-      .nav li a {
+      .ml-auto li a {
         color: $gray;
         &:hover {
           color: $link-color;
@@ -583,7 +576,7 @@ body.canvas-menu .nav-header {
       border-bottom: 1px solid $light-gray1;
       border-radius: 0;
     }
-    .nav > li > a {
+    .ml-auto > li > a {
       padding: 25px 10px 15px;
     }
     .navbar-nav > li > a {
