--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2011,11 +2011,12 @@ body {
   .social-icon a {
     background: $link-color;
     color: $white;
-    padding-top: 3px;
+    padding-top: 5px;
     height: 30px;
     width: 30px;
     display: block;
     border-radius: 50px;
+    font-size: 0.85rem;
     &:hover {
       background: $link-color;
     }
