--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="navbar-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
