--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -295,8 +295,7 @@ body.canvas-menu .nav-header {
       padding-left: 0;
     }
     .navbar {
-      padding-right: 15px;
-      padding-left: 15px;
+      padding: 0;
     }
   }
   .navbar-light {
@@ -493,8 +492,7 @@ body.canvas-menu .nav-header {
         padding-left: 15px;
       }
       .navbar {
-        padding-right: 0;
-        padding-left: 0;
+        padding: 0;
         border-radius: 4px;
       }
     }
