added margin on scroll

--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -538,11 +538,11 @@ body.canvas-menu .nav-header {
       padding: 20px 10px;
     }
     .navbar .navbar-brand {
-      margin-top: 6px;
       border-radius: 5px;
       font-size: 12px;
       padding: 10px;
       height: auto;
+      margin: 0.2rem;
     }
     .navbar-light .navbar-nav > .active > a {
       color: inherit;
