--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -18,8 +18,8 @@
         </div>
         {% endfor %}
         <!-- avatar -->
-        <div class="col-sm-4">
-            <div class="team-member wow zoomIn d-flex">
+        <div class="col-sm-4 d-flex">
+            <div class="team-member wow zoomIn">
                 <div id="avatar" style="height: 160px;">
                     <img data-src="{{ site.author.avatar | prepend: site.baseurl }}" class="lozad img-fluid rounded-circle" alt="avatar">
                 </div>
