--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -12,7 +12,7 @@
             <h1><span data-i18n="link.link">Link</span></h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row d-flex">
     {% for link in site.data.index.links %}
         {% assign loopindex = forloop.index | modulo: 3 %}
         {% if forloop.last %}
@@ -24,7 +24,7 @@
         {% else %}
         <div class="col-sm-4 wow {% if loopindex == 1 %} fadeInLeft {% else if loopindex == 2 %} zoomIn {% else %} fadeInRight {% endif %}">
         {% endif %}
-        <div class="team-member d-flex">
+        <div class="team-member">
             <h5><span class="navy">{{ link.last_name }}</span> {{ link.first_name }}</h5>
             <p>{{ link.desc }}</p>
             <ul class="list-inline social-icon mx-auto justify-content-center">
