--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2010,6 +2010,9 @@ body {
     img {
       margin: auto;
     }
+    .social-items {
+      text-align: justify;
+    }
   }
   .social-icon a {
     background: $link-color;
