--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -23,15 +23,19 @@
             </button>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link page-scroll" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" data-toggle="tab" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a>
+                    </li>
                     {% for tag in site.data.blog %}
                         {% if tag.name != 'Donate' or site.donation %}
+                        
+                        <li class="nav-item">
                         {% if page.title == tag.name %}
-                        <li class="nav-item active">
+                            <a class="nav-link active page-scroll" data-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
                         {% else %}
-                        <li>
+                            <a class="nav-link page-scroll" data-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
                         {% endif %}
-                        <a class="nav-link page-scroll" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a></li>
+                        </li>
                         {% endif %}
                     {% endfor %}
                 </ul>
