--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbar" class="navbar-collapse collapse">
-                <ul class="navbar-nav ml-auto">
+                <ul class="nav nav-tabs navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link page-scroll" data-toggle="tab" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a>
                     </li>
