removed border nav-tabs

--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -168,6 +168,10 @@ h3, h4, h5 {
   margin-top: 0;
 }
 
+.nav-tabs {
+  border: none;
+}
+
 body {
   &.fixed-nav #wrapper #page-wrapper {
     margin-top: 60px;
