--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -311,6 +311,8 @@ body.canvas-menu .nav-header {
       letter-spacing: 1px;
       text-transform: uppercase;
       font-size: 14px;
+      border: none !important;
+      background: transparent;
     }
   }
   .navbar-nav > li > a {
