--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -304,7 +304,7 @@ body.canvas-menu .nav-header {
     background-color: transparent;
     border-color: transparent;
     transition: all .3s ease-in-out 0s;
-    .ml-auto li a {
+    .navbar-link {
       color: $white;
       font-family: 'Open Sans', helvetica, arial, sans-serif;
       font-weight: 700;
