--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -346,7 +346,7 @@ body.canvas-menu .nav-header {
       }
       .active {
         background: 0 0;
-        color: $white;
+        //color: $white;
         border-top: 6px solid $link-color;
         &:hover {
           background: 0 0;
