--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -333,7 +333,7 @@ body.canvas-menu .nav-header {
     }
     .navbar-nav {
       .nav-link {
-        color: $white;
+        color: $white !important;
         font-family: 'Open Sans', helvetica, arial, sans-serif;
         font-weight: 700;
         letter-spacing: 1px;
