--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -193,37 +193,37 @@ body.canvas-menu .nav-header {
       padding: 0;
     }
   }
+  .navbar-scroll {
+    background-color: $white;
+    border-bottom: 1px solid $light-gray1 !important;
+    border-radius: 0;
+    border-color: $white;
+    padding: 15px 0;
+    .navbar-nav .navbar-link.active {
+      &:focus {
+        background: 0 0;
+        color: inherit;
+      }
+    }
+    .navbar-nav .navbar-link {
+      padding: 20px 10px;
+      color: $gray;
+      &:hover {
+        color: $link-color;
+      }
+    }
+    .navbar-brand {
+      border-radius: 5px;
+      font-size: 12px;
+      padding: 10px;
+      margin: 0.2rem;
+    }
+  }
   .navbar-light {
     border: none !important;
     background-color: transparent;
     border-color: transparent;
     transition: all .3s ease-in-out 0s;
-    &.navbar-scroll {
-      background-color: $white;
-      border-bottom: 1px solid $light-gray1 !important;
-      border-radius: 0;
-      border-color: $white;
-      padding: 15px 0;
-      .navbar-nav .navbar-link.active {
-        &:focus {
-          background: 0 0;
-          color: inherit;
-        }
-      }
-      .navbar-nav .navbar-link {
-        padding: 20px 10px;
-        color: $gray;
-        &:hover {
-          color: $link-color;
-        }
-      }
-      .navbar-brand {
-        border-radius: 5px;
-        font-size: 12px;
-        padding: 10px;
-        margin: 0.2rem;
-      }
-    }
     .navbar-brand {
       &:focus, &:hover {
         background: $link-color;
