--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -187,7 +187,7 @@ body.canvas-menu .nav-header {
       padding: 0;
     }
   }
-  .navbar-scroll {
+  .navbar-light.navbar-scroll {
     background-color: $white;
     border-bottom: 1px solid $light-gray1 !important;
     border-radius: 0;
