--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -202,7 +202,7 @@ body.canvas-menu .nav-header {
           }
         }
         .nav-link {
-          padding: 20px 10px;
+          padding: 16px 10px 20px;
           color: $gray;
           &:hover {
             color: $link-color;
