--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -380,6 +380,38 @@ body.canvas-menu .nav-header {
         font-size: 28px;
       }
     }
+    .navbar-light {
+      background-color: $white;
+      border-color: $white;
+      padding: 15px 0;
+      .navbar-nav > .active {
+        background: 0 0;
+        color: inherit;
+      }
+      .ml-auto .nav-link {
+        color: $gray;
+        &:hover {
+          color: $link-color;
+        }
+      }
+    }
+    .navbar-wrapper .navbar {
+      padding: 0;
+      border-bottom: 1px solid $light-gray1;
+      border-radius: 0;
+    }
+    .ml-auto > li > a {
+      padding: 25px 10px 15px;
+    }
+    .navbar-nav > li > a {
+      padding: 20px 10px;
+    }
+    .navbar-light .navbar-nav > .active {
+      color: inherit;
+      &:hover {
+        color: inherit;
+      }
+    }
     .carousel-control {
       display: none;
     }
