--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="navbar-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">{{ site.title }}</a>
