--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="navbar-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" role="navigation" id="navbar1">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">{{ site.title }}</a>
@@ -49,4 +49,4 @@
 
 
 <!-- Main Scripts -->
-<script src="{{"/static/assets/blog-20190702.min.js"| prepend: site.baseurl }}"></script>
+<script src="{{"/static/assets/blog-20190703.min.js"| prepend: site.baseurl }}"></script>
