--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
     {% include index_head.html %}
   {% endif %}
 
-<body id="page-top" class="landing-page" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body id="page-top" class="landing-page" data-spy="scroll" data-target="#navbar1" data-offset="50">
 
   {% if page.title != 'index' %}
     {% include blog_header.html %}
@@ -27,17 +27,17 @@ layout: compress
 
 
   <!-- Main scripts -->
-  <script src="{{ "/static/assets/app-20190702.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/static/assets/app-20190703.min.js" | prepend: site.baseurl }}"></script>
   {% if site.data.index.projects %}
   <script async defer src="{{ "/static/js/github_api.min.js" | prepend: site.baseurl }}"></script>
   {% endif %}
   {% if site.data.index.language %}
-  <script src="{{"/static/assets/i18-20190702.min.js"| prepend: site.baseurl }}"></script>
+  <script src="{{"/static/assets/i18-20190703.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
   <script src="{{"/static/js/skills.js"| prepend: site.baseurl }}"></script>
 
   <!-- Main CSS -->
-  <link href="{{ "/static/assets/app-20190702.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link href="{{ "/static/assets/app-20190703.min.css" | prepend: site.baseurl }}" rel="stylesheet">
   <link href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
 
 </body>
