added background repeat

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -19,7 +19,7 @@
                 class="lozad header-back"
                 data-background-image="{{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }}"
                 title="{{ site.data.index.banners[0].title }}"
-                style="height: 78px; width: 1920px;"
+                style="height: 78px; background-repeat: repeat-x;"
             >
             </div>
         </div>
