added sitemap meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,5 +33,6 @@
     });
   </script>
   -->
+  <meta name="google-site-verification" content="JUIb48I1Z-njBdMOn5wL4v5KyTRyohhry3kGnliSfl0" />
   {% seo %}
 </head>
