--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -7,6 +7,7 @@
   <meta content="{{ site.description }}" name="description">
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="author" content="{{ site.author.name }}">
+  <meta name="google-site-verification" content="JUIb48I1Z-njBdMOn5wL4v5KyTRyohhry3kGnliSfl0" />
   <title>{{ site.title }}</title>
 
   <!-- favicon -->
