updated to bootstrap 5

--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -128,7 +128,7 @@ body.canvas-menu .nav-header {
   margin: 0;
 }
 
-.link-block, .ml-auto.navbar-top-links .link-block a {
+.link-block, .ms-auto.navbar-top-links .link-block a {
   font-size: 12px;
 }
 
