--- a/_includes/category.html
+++ b/_includes/category.html
@@ -50,7 +50,7 @@ $(function(){
                                     {% endfor %}
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="small text-right">
+                                    <div class="small text-end">
                                         <div>
                                             {% if site.disqus %}
                                             <i class="far fa-comments"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span>
