--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
                                 {% endfor %}
                         </div>
                         <div class="col-md-6">
-                            <div class="small text-right">
+                            <div class="small text-end">
                                 <div>
                                 {% if site.disqus %}
                                 <i class="far fa-comments"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span>
