rename classes bootstrap 5

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -43,11 +43,11 @@
     </div>
     <!--<a class="carousel-item-left carousel-control" href="#inSlider" role="button" data-slide="carousel-control-prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+        <span class="visually-hidden">Previous</span>
     </a>
     <a class="carousel-item-right carousel-control" href="#inSlider" role="button" data-slide="carousel-control-next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+        <span class="visually-hidden">Next</span>
     </a>
     -->
 </div>
