added padding top

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -9,7 +9,7 @@
     <div class="row">
         <!-- first two icons -->
         {% for icon in site.author.skill_icon1 %}
-        <div class="col-sm-2 wow fadeInLeft">
+        <div class="col-sm-2 wow fadeInLeft" style="padding-top: 3em">
             <div class="team-member">
                 <div class="vote-icon" style="text-align: center">
                     <i class="fab {{ icon.name }}"></i>
@@ -51,7 +51,7 @@
         </div>
         <!-- second two icons -->
         {% for icon in site.author.skill_icon2 %}
-        <div class="col-sm-2 wow fadeInRight">
+        <div class="col-sm-2 wow fadeInRight" style="padding-top: 3em">
             <div class="team-member">
                 <div class="vote-icon" style="text-align: center">
                     <i class="fab {{ icon.name }}"></i>
