replaced data with data-bs

--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -17,23 +17,23 @@
             <div class="navbar-header page-scroll">
                 <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">{{ site.title }}</a>
             </div>
-            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="visually-hidden">Toggle navigation</span>
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav nav-tabs navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" data-toggle="tab" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a>
+                        <a class="nav-link page-scroll" data-bs-toggle="tab" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a>
                     </li>
                     {% for tag in site.data.blog %}
                         {% if tag.name != 'Donate' or site.donation %}
                         
                         <li class="nav-item">
                         {% if page.title == tag.name %}
-                            <a class="nav-link active page-scroll" data-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
+                            <a class="nav-link active page-scroll" data-bs-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
                         {% else %}
-                            <a class="nav-link page-scroll" data-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
+                            <a class="nav-link page-scroll" data-bs-toggle="tab" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a>
                         {% endif %}
                         </li>
                         {% endif %}
