--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,7 +1,7 @@
 <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
     <!--<ol class="carousel-indicators">
-        <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-        <li data-target="#inSlider" data-slide-to="1"></li>
+        <li data-bs-target="#inSlider" data-slide-to="0" class="active"></li>
+        <li data-bs-target="#inSlider" data-slide-to="1"></li>
     </ol>
     -->
     <div class="carousel-inner" role="listbox">
