--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
     {% include index_head.html %}
   {% endif %}
 
-<body id="page-top" class="landing-page" data-spy="scroll" data-target="#navbar1" data-offset="50">
+<body id="page-top" class="landing-page" data-spy="scroll" data-bs-target="#navbar1" data-offset="50">
 
   {% if page.title != 'index' %}
     {% include blog_header.html %}
