--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="carousel-caption">
                 </div>
-                <div class="carousel-image wow zoomIn">
+                <div class="carousel-image wow animate__zoomIn">
                     <!-- <img src="static/img/landing/laptop.png" alt="laptop"/> -->
                 </div>
             </div>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="carousel-caption">
                 </div>
-                <div class="carousel-image wow zoomIn">
+                <div class="carousel-image wow animate__zoomIn">
                     <!-- <img src="static/img/landing/laptop.png" alt="laptop"/> -->
                 </div>
             </div>
