--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -10,12 +10,12 @@
             {% assign loopindex = forloop.index | modulo: 2 %}
             {% if forloop.last %}
                 {% if forloop.last == forloop.first %}
-            <div class="col-sm-6 wow offset-sm-3 zoomIn">
+            <div class="col-sm-6 wow offset-sm-3 animate__zoomIn">
                 {% else %}
-            <div class="col-sm-6 wow {% if loopindex == 1 %} fadeInLeft offset-sm-3 {% else %} fadeInRight {% endif %}">
+            <div class="col-sm-6 wow {% if loopindex == 1 %} animate__fadeInLeft offset-sm-3 {% else %} animate__fadeInRight {% endif %}">
                 {% endif %}
             {% else %}
-            <div class="col-sm-6 wow {% if loopindex == 1 %} fadeInLeft {% else %} fadeInRight {% endif %}">
+            <div class="col-sm-6 wow {% if loopindex == 1 %} animate__fadeInLeft {% else %} animate__fadeInRight {% endif %}">
             {% endif %}
               <div class="team-member">
                   <img data-src="{{ project.img | prepend: site.baseurl }}" class="lozad img-fluid rounded-circle img-small" alt="">
