--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="row features-block">
-        <div class="wow zoomIn col-lg-6 offset-lg-3">
+        <div class="wow animate__zoomIn col-lg-6 offset-lg-3">
             <canvas id="{{ site.data.index.skills.id }}" height="500" width="500"></canvas>
         </div>
         <div class="col-lg-1"></div>
