--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2102,8 +2102,8 @@ div#avatar {
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: 400;
-  font-display:swap;src: url(../static/assets/webfonts/fa-brands-400.eot);
-  src: url(../static/assets/webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(../static/assets/webfonts/fa-brands-400.woff2) format("woff2"),url(../static/assets/webfonts/fa-brands-400.woff) format("woff"),url(../static/assets/webfonts/fa-brands-400.ttf) format("truetype"),url(../static/assets/webfonts/fa-brands-400.svg#fontawesome) format("svg")
+  font-display:swap;src: url(/static/assets/webfonts/fa-brands-400.eot);
+  src: url(/static/assets/webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(/static/assets/webfonts/fa-brands-400.woff2) format("woff2"),url(/static/assets/webfonts/fa-brands-400.woff) format("woff"),url(/static/assets/webfonts/fa-brands-400.ttf) format("truetype"),url(/static/assets/webfonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 // Fix Google Chrome audit "Ensure text remains visible during webfont load"
@@ -2111,8 +2111,8 @@ div#avatar {
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 400;
-  font-display:swap;src: url(../static/assets/webfonts/fa-regular-400.eot);
-  src: url(../static/assets/webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(../static/assets/webfonts/fa-regular-400.woff2) format("woff2"),url(../static/assets/webfonts/fa-regular-400.woff) format("woff"),url(../static/assets/webfonts/fa-regular-400.ttf) format("truetype"),url(../static/assets/webfonts/fa-regular-400.svg#fontawesome) format("svg")
+  font-display:swap;src: url(/static/assets/webfonts/fa-regular-400.eot);
+  src: url(/static/assets/webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(/static/assets/webfonts/fa-regular-400.woff2) format("woff2"),url(/static/assets/webfonts/fa-regular-400.woff) format("woff"),url(/static/assets/webfonts/fa-regular-400.ttf) format("truetype"),url(/static/assets/webfonts/fa-regular-400.svg#fontawesome) format("svg")
 }
 
 // Fix Google Chrome audit "Ensure text remains visible during webfont load"
@@ -2120,6 +2120,6 @@ div#avatar {
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 900;
-  font-display:swap;src: url(../static/assets/webfonts/fa-solid-900.eot);
-  src: url(../static/assets/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(../static/assets/webfonts/fa-solid-900.woff2) format("woff2"),url(../static/assets/webfonts/fa-solid-900.woff) format("woff"),url(../static/assets/webfonts/fa-solid-900.ttf) format("truetype"),url(../static/assets/webfonts/fa-solid-900.svg#fontawesome) format("svg")
+  font-display:swap;src: url(/static/assets/webfonts/fa-solid-900.eot);
+  src: url(/static/assets/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(/static/assets/webfonts/fa-solid-900.woff2) format("woff2"),url(/static/assets/webfonts/fa-solid-900.woff) format("woff"),url(/static/assets/webfonts/fa-solid-900.ttf) format("truetype"),url(/static/assets/webfonts/fa-solid-900.svg#fontawesome) format("svg")
 }
